<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="49dip"
    	android:gravity="center_vertical"
        android:orientation="horizontal" >
	    <ImageView
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/setting_back" />
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password_cancle"
	        android:textColor="#FF687D87"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#E3E5E7" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dip" >
        <EditText
            android:id="@+id/old_password"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:password="true"
	        android:numeric="integer"
            android:maxLength="4"
            android:hint="@string/input_old_password"
            android:gravity="center_vertical"
            android:background="@drawable/edit_bg" />
    </LinearLayout>
    
    <Button
        android:id="@+id/set_done"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:background="@drawable/selector_button"
        android:layout_marginTop="30dip" />
</LinearLayout>