<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="49dip"
    	android:gravity="center_vertical"
        android:orientation="horizontal" >
	    <ImageView
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/setting_back" />
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/setting"
	        android:textColor="#FF687D87"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#E3E5E7" />

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_all"
        android:orientation="vertical" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/password_setting"
            android:textColor="#FF687D87"
            android:textSize="15.0sp"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="12dip"
            android:layout_marginBottom="12dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_cancle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_all"
        android:orientation="vertical" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/password_cancle"
            android:textColor="#FF687D87"
            android:textSize="15.0sp"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="12dip"
            android:layout_marginBottom="12dip" />
    </LinearLayout>
    
</LinearLayout>